samples/_failures_safe/1761326395_879307_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f427b3f.c: In function ‘main’:
./samples/SAFE/__tmp_0f427b3f.c:172:12: error: missing terminating " character
  172 |     printf("Enter expression to tokenize
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0f427b3f.c:172:5: error: expected expression at end of input
  172 |     printf("Enter expression to tokenize
      |     ^~~~~~
./samples/SAFE/__tmp_0f427b3f.c:172:5: error: expected declaration or statement at end of input
